# MegaProjectListSolution

./: CMakeLists.txt  MegaProjectListSolution.sln
AlarmClock/: AlarmClock.sln
AlarmClock/AlarmClock/: AlarmClock.vcxproj  AlarmClock.vcxproj.filters  AlarmClockWidget.cpp  AlarmClockWidget.h  MainWindow.cpp  MainWindow.h  SetAlarmWindow.cpp  SetAlarmWindow.h  UI.cpp  UI.h  main.cpp
FibonacciSequence/: FibonacciSequence.vcxproj  main.cpp
FindCostOfTileToCoverWxHFloor/: FindCostOfTileToCoverWxHFloor.vcxproj  main.cpp
FindEToTheNthDigit/: FindEToTheNthDigit.vcxproj  FindEToTheNthDigit.vcxproj.filters  main.cpp  task.txt
FindPIToTheNthDigit/: FindPIToTheNthDigit.vcxproj  main.cpp
MegaProjectListSolution/: MegaProjectListSolution.vcxproj
NextPrimeNumber/: NextPrimeNumber.vcxproj  NextPrimeNumber.vcxproj.filters  main.cpp
PrimeFactorization/: PrimeFactorization.vcxproj  main.cpp
UnitConverter/: CMakeLists.txt  UnitConverter.sln
UnitConverter(gtkmm)/: CMakeLists.txt
UnitConverter(gtkmm)/css/: style.css
UnitConverter(gtkmm)/include/: main.h
UnitConverter/UnitConverter/: UI.cpp  UI.h  UnitConverter.cpp  UnitConverter.h  UnitConverter.qrc  UnitConverter.ui  UnitConverter.vcxproj  UnitConverter.vcxproj.filters  main.cpp
UnitConverter/include/: Window.h
UnitConverter/src/: Window.cpp  main.cpp
